examples/test/testpolicy16529.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16529
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key46: value4
      key13: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value25
      podSelector:
        matchLabels:
          key2: value22
          key39: value49
